--- a/bidir_dag_lstm/config.json
+++ b/bidir_dag_lstm/config.json
@@ -29,7 +29,7 @@
     "char_lstm_dim": 50,
     "max_char_per_word": 20,
     
-    "edgelabel_dim": 50,
+    "edgelabel_dim": 100,
     "neighbor_vector_dim": 100,
     "fix_word_vec": true,
     "compress_input": true,
@@ -37,4 +37,6 @@
 
     "config_path": "config.json",
     "generate_config": false
+
+    , "dag_hidden_dim": 100
 }
