--- a/bidir_dag_lstm/config.json
+++ b/bidir_dag_lstm/config.json
@@ -7,7 +7,7 @@
     
     "word_format": "morph",
     "class_num": 5,
-    "only_single_sent": true,
+    "only_single_sent": false,
 
     "batch_size": 8,
     "max_node_num": 450,
@@ -15,7 +15,7 @@
     "max_out_neigh_num": 45,
     "max_entity_size":5,
     "entity_num":3,
-    "learning_rate": 0.0001,
+    "learning_rate": 0.000001,
     "lambda_l2": 0.001,
     "dropout_rate": 0.1,
     "max_epochs": 50,
