--- a/bidir_dag_lstm/config.json
+++ b/bidir_dag_lstm/config.json
@@ -7,7 +7,7 @@
     
     "word_format": "morph",
     "class_num": 5,
-    "only_single_sent": true,
+    "only_single_sent": false,
 
     "batch_size": 8,
     "max_node_num": 450,
@@ -15,7 +15,7 @@
     "max_out_neigh_num": 45,
     "max_entity_size":5,
     "entity_num":3,
-    "learning_rate": 0.00001,
+    "learning_rate": 0.0001,
     "lambda_l2": 0.001,
     "dropout_rate": 0.1,
     "max_epochs": 50,
@@ -29,7 +29,7 @@
     "char_lstm_dim": 50,
     "max_char_per_word": 20,
     
-    "edgelabel_dim": 100,
+    "edgelabel_dim": 50,
     "neighbor_vector_dim": 100,
     "fix_word_vec": true,
     "compress_input": true,
