changes for extracting detailed outputs

--- a/gs_lstm/config.json
+++ b/gs_lstm/config.json
@@ -43,6 +43,6 @@
 
 
     , "train_result_path": "logs/train/result.json"
-    , "validate_path": "logs/validate/result.json"
-    , "test_path": "logs/test/result.json"
+    , "validate_result_path": "logs/validate/result.json"
+    , "test_result_path": "logs/test/result.json"
 }
