--- a/bidir_dag_lstm/config.json
+++ b/bidir_dag_lstm/config.json
@@ -15,11 +15,11 @@
     "max_out_neigh_num": 45,
     "max_entity_size":5,
     "entity_num":3,
-    "learning_rate": 0.00005,
+    "learning_rate": 0.02,
     "lambda_l2": 0.001,
     "dropout_rate": 0.1,
     "max_epochs": 50,
-    "optimize_type": "adam",
+    "optimize_type": "sgd",
 
     "with_highway": true,
     "highway_layer_num": 1,
@@ -30,7 +30,7 @@
     "max_char_per_word": 20,
     
     "edgelabel_dim": 50,
-    "neighbor_vector_dim": 100,
+    "neighbor_vector_dim": 150,
     "fix_word_vec": true,
     "compress_input": true,
     "compress_input_dim": 100,
@@ -38,5 +38,5 @@
     "config_path": "config.json",
     "generate_config": false
 
-    , "dag_hidden_dim": 100
+    , "dag_hidden_dim": 150
 }
